test_regress/t/t_func_bad2.out
%Error-UNSUPPORTED: t/t_func_bad2.v:8:13: Unsupported: Recursive function or task call
                                        : ... In instance t
    8 |    function recurse;
      |             ^~~~~~~
%Error: Exiting due to
